# Smart-Todo-Application

./: ReadMe.md  main.py  pyproject.toml
src/parsers/: date_parser.py  regex_patterns.py  task_parser.py  validator.py
src/services/: data.json  storage_service.py  task_service.py
