[project]
name = "smart-todo-application"
version = "0.1.0"
description = "Build a command-line todo application with advanced features powered by regular expressions for intelligent task parsing and management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "dateparser>=1.2.2",
    "fire>=0.7.1",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pendulum>=3.1.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "python-dateutil>=2.9.0.post0",
    "typer[all]>=0.20.0",
]
